--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 node_modules
 public/styles/main.css
 public/styles/main.css.map
+public/styles/producto.css
+public/styles/producto.css.map
+public/styles/tienda.css
+public/styles/tienda.css.map
