Conexión a mongo y raer todos los documentos

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Happy",
   "license": "ISC",
   "dependencies": {
+    "assert": "^1.4.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "mongodb": "^3.2.3",
