Carrito de compras sin estilos

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ public/styles/producto.css
 public/styles/producto.css.map
 public/styles/tienda.css
 public/styles/tienda.css.map
+public/styles/carrito.css
+public/styles/carrito.css.map
