--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "assert": "^1.4.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
+    "gsap": "^2.1.3",
     "mongodb": "^3.2.3",
     "nodemon": "^1.19.0"
   }
