juego en pagina individual

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ public/styles/tienda.css
 public/styles/tienda.css.map
 public/styles/carrito.css
 public/styles/carrito.css.map
+public/styles/juego.css
+public/styles/juego.css.map
